# MaiBot-Telegram-Adapter

./: README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  logger.py  mmc_com_layer.py  telegram_client.py  utils.py
src/config/: __init__.py  config.py  config_base.py  official_configs.py
src/recv_handler/: message_handler.py  message_sending.py
src/send_handler/: main_send_handler.py  tg_sending.py
template/: template_config.toml
