[project]
name = "MaiBotTelegramAdapter"
version = "0.1.0"
description = "A MaiBot adapter for Telegram"

[tool.ruff]
include = ["*.py"]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
  "E",
  "F",
  "B",
]
ignore = ["E711","E501"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

